k8s/templates/redis/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  podSelector:
    matchLabels:
      io.kompose.network/redis: "true"
  policyTypes:
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/redis: "true"
  egress: []
